--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'com.android.application'
+    id 'androidx.navigation.safeargs'
+
 }
 apply plugin: 'realm-android'
 apply plugin: "androidx.navigation.safeargs"
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -38,11 +39,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-//    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    // Navigation libraries
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
+
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
