ConfirmActivity is created. First dose time issue is fixed for when choosing a QR from gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fingertiptech.medontime">
-<!--    <uses-permission android:name="android.permission.CAMERA" />-->
+    <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedOnTime">
+        <activity android:name=".ConfirmActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -29,9 +30,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".NotificationReceiver"/>
-        <receiver android:name=".AlarmReceiver"/>
-
+        <receiver android:name=".NotificationReceiver" />
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
