--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        android:name=".NotificationAndAlarm"
+        android:name=".Notification"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,7 +31,6 @@
         </activity>
 
         <receiver android:name=".NotificationReceiver" />
-        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
